refactor for paths, modules for distributed mode